test/features/errors/codegen/e2002_ffi_error.spl
# E2002: FFI Error

Feature: E2002 - FFI Error During Codegen
  As a Simple compiler
  I want to detect FFI errors during code generation
  So that external function calls are correct

  Background:
    Given I have the Simple compiler

  Scenario: FFI signature mismatch
    When I compile with codegen:
      '''
      extern fn external_func(x: i32, y: i32) -> i32

      fn test():
        # Error if actual signature doesn't match
        external_func(1, 2)
      '''
    Then I should see error E2002
    And the error message should be "FFI error: {message}"
    And the label should indicate "FFI error here"
    And the help should suggest "check the external function signature and calling convention"

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile with codegen:
      '''
      extern fn bad_external()

      fn test():
        bad_external()
      '''
    Then I should see error E2002
    And the error message should contain "FFI 오류"
